4 files modified, 3 added - completed 1st angular app

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,6 +13,15 @@
   Description: {{ product.description }}
 </p>
 
+<button (click)="share()">
+  Share
+</button>
+
+<app-product-alert
+  [product]="product"
+  (notify)="onNotify()">
+</app-product-alert>
+
 </div>
 
 
